--- a/app/src/main/res/layout/fragment_enroll_recipe.xml
+++ b/app/src/main/res/layout/fragment_enroll_recipe.xml
@@ -225,17 +225,24 @@
             android:textColor="#000002"/>
 
 
-        <EditText
-            android:background="@drawable/inputbox"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
+        <ListView
             android:id="@+id/id1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:textColorHint="#032149"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/inputbox"
             android:inputType="text"
-            android:layout_gravity="center" />
+            android:textColorHint="#032149" />
+
+        <Button
+            android:id="@+id/addIngredient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/inputbox"
+            android:text="+"/>
 
 
     </LinearLayout>
@@ -258,17 +265,24 @@
             android:textColor="#000002"/>
 
 
-        <EditText
+        <ListView
             android:background="@drawable/inputbox"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:id="@+id/id2"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:textColorHint="#032149"
             android:inputType="text"
             android:layout_gravity="center" />
+
+        <Button
+            android:id="@+id/addCook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/inputbox"
+            android:text="+"/>
 
         <Button
             android:layout_marginTop="10dp"
