--- a/app/src/main/res/layout/fragment_recipe_view.xml
+++ b/app/src/main/res/layout/fragment_recipe_view.xml
@@ -26,9 +26,6 @@
                 android:textColor="#E91E63" />
         </LinearLayout>
 
-
-
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -67,139 +64,109 @@
     </LinearLayout>
     <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="10">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="10"
-        android:orientation="vertical">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            >
-
-            <ImageView
-                android:gravity="center"
-                android:id="@+id/showim"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/img"
-                android:scaleType="fitXY"/>
-
-
-        </LinearLayout>
-
+        android:layout_weight="10">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="10"
             android:orientation="vertical">
-
-
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:fontFamily="@font/font3"
-                    android:text="재료"
-                    android:textColor="#000000"
-                    android:textSize="23dp" />
+                android:layout_height="190dp"
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/showIng"
-                    android:layout_marginTop="10dp"
+                <LinearLayout
+                    android:layout_width="150dp"
+                    android:layout_height="190dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/showim"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:gravity="center"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/img" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+
+                        <Button
+                            android:id="@+id/like"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@drawable/upp"
+                            android:enabled="true"
+                            android:onClick="onClick"
+                            android:padding="5dp" />
+
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:background="@android:color/darker_gray" />
+
+
+                        <Button
+                            android:id="@+id/dlike"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+
+                            android:layout_weight="1"
+                            android:background="@drawable/dow"
+                            android:enabled="true"
+                            android:padding="5dp" />
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/darker_gray" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:fontFamily="@font/font5"
-                    android:text="재료는 여기에 들어갑니다"
-                    android:textColor="#000000"
-                    android:textSize="20dp" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/ingredient_list"/>
+                </LinearLayout>
 
 
             </LinearLayout>
-
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recipe_list"/>
 
         </LinearLayout>
 
-
     </LinearLayout>
 
-
-
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
-
-
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:orientation="vertical">
-
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/font3"
-            android:text="조리법"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:textColor="#000000"
-            android:textSize="23dp" />
-
-        <TextView
-            android:layout_margin="10dp"
-            android:id="@+id/showCk"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/font5"
-            android:text="여기에 조리법이 들어갑니다"
-            android:textColor="#000000"
-            android:textSize="20dp" />
-
-
-    </LinearLayout>
-
-    </LinearLayout>
-
-    </ScrollView>
-
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
-
-
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
 
     <LinearLayout
         android:layout_width="match_parent"
