--- a/app/src/main/res/layout/fragment_voice_alert.xml
+++ b/app/src/main/res/layout/fragment_voice_alert.xml
@@ -11,7 +11,6 @@
         android:orientation="horizontal">
 
 
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -19,12 +18,17 @@
             android:gravity="center"
 
             >
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:layout_gravity="center"
-                android:text="무엇을 도와드릴까요??"
-                android:textSize="20dp" />
+                android:fontFamily="@font/font3"
+                android:text="USER"
+                android:textColor="#111111"
+                android:textSize="30dp" />
+
 
         </LinearLayout>
 
@@ -50,122 +54,223 @@
 
     <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
 
+
+    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="10"
         android:orientation="vertical"
         android:gravity="center"
-
         >
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="50dp"
-            android:adjustViewBounds="true"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:src="@drawable/emo"/>
-
-
-        <TextView
-            android:id="@+id/test"
-            android:textSize="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/tmpTextView"
-            android:textSize="30dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+        <TextView
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:id="@+id/test"
+            android:textSize="20dp"
+            android:fontFamily="@font/font5"
             android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="TextView" />
+        </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+        <Button
+            android:paddingTop="30dp"
+            android:text="음성인식"
+            android:drawableTop="@drawable/mike"
+            android:id="@+id/st"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/circlebtn"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:textSize="20dp"
+            android:fontFamily="@font/font5"
+            android:textColor="#567ACE"/>
+
+
+</LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:id="@+id/tmpTextView"
+                    android:textSize="24dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/font5"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:textAlignment="center"
+                    android:text="TextView" />
+
+            </ScrollView>
+
+        </LinearLayout>
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:progressDrawable="@drawable/custom_progressbar"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
-        android:progress="0" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <Button
-                android:id="@+id/baku"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/nxtb"
-                android:enabled="true"
-                android:onClick="onClick"
-                android:textColor="#E91E63" />
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <Button
-                android:id="@+id/st"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/pbtn"
-                android:enabled="true"
-                android:onClick="onClick"
-                android:textColor="#E91E63" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            >
-            <Button
-                android:id="@+id/nex"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/bfrb"
-                android:enabled="true"
-
-                android:onClick="onClick"
-                android:textColor="#E91E63" />
-
-        </LinearLayout>
-
-
-        <EditText
-            android:id="@+id/test_input"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="" />
+            android:layout_weight="0.5"
+            android:orientation="vertical">
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:progressDrawable="@drawable/custom_progressbar"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:progress="0" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                >
+                <Button
+                    android:id="@+id/baku"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/nxtb"
+                    android:enabled="true"
+                    android:onClick="onClick"
+                    android:textColor="#E91E63" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                >
+                <Button
+                    android:id="@+id/nex"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bfrb"
+                    android:enabled="true"
+
+                    android:onClick="onClick"
+                    android:textColor="#E91E63" />
+
+            </LinearLayout>
+
+
+</LinearLayout>
+        </LinearLayout>
+
+
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+
+        <ImageButton
+            android:id="@+id/toL"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/list"
+            android:enabled="true"
+            android:onClick="onClick"
+            android:background="@drawable/btn2"
+            android:layout_weight="1"
+            android:padding="5dp"
+            />
+
+
+
+        <ImageButton
+            android:id="@+id/toM"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/user"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:layout_weight="1"
+            android:padding="5dp"/>
+
+        <ImageButton
+            android:id="@+id/toH"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/home"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:layout_weight="1"
+            android:padding="5dp"/>
+
+
+        <ImageButton
+            android:id="@+id/toT"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/prefer"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:layout_weight="1"
+            android:padding="5dp"/>
+
+
+
+
+
+        <ImageButton
+            android:id="@+id/toE"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/erl"
+            android:background="@drawable/btn2"
+            android:enabled="true"
+            android:layout_weight="1"
+            android:padding="5dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
